--- a/Tech/Views/Course/Add.cshtml
+++ b/Tech/Views/Course/Add.cshtml
@@ -7,24 +7,34 @@
 }
 
 <h1>Add</h1>
+<div asp-validation-summary="All" class="text-danger"></div>
 
 <form method="post" asp-action="SaveAdd" asp-controller="Course">
-    <div>
+    <div class="text-danger">
+
         <label asp-for="Name"></label>
         <input class="form form-control" asp-for="Name" />
+         <span asp-validation-for="Name" class="text-danger"></span>
+
     </div>
+
     <div>
         <label asp-for="Degree"></label>
         <input class="form form-control" asp-for="Degree" />
+        <span asp-validation-for="Degree" class="text-danger"></span>
+
     </div>
 
     <div>
         <label asp-for="MinDegree"></label>
         <input class="form form-control" asp-for="MinDegree" />
+        <span asp-validation-for="MinDegree" class="text-danger"></span>
+
     </div>
     <div>
         <label asp-for="Hours"></label>
         <input class="form form-control" asp-for="Hours" />
+        <span asp-validation-for="Hours" class="text-danger"></span>
     </div>
 
     <div>
@@ -38,3 +48,8 @@
 
 </form>
 <a asp-action="Index"> Back To List </a>
+
+
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
